atualização do menu com efeitos hover

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -5,6 +5,10 @@ $cor3: #EF5C5C;
 $cor4: #212125;
 $cor5: #E1E1D7;
 
+$cor1b: #a3d3839f;
+$cor3b: #ef5c5c8a;
+$cor5b: #e1e1d7af;
+
 // fontes usadas no projeto
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap');
