atualização do header

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -7,13 +7,10 @@ $cor5: #E1E1D7;
 
 $cor1b: #a3d3839f;
 $cor3b: #ef5c5c8a;
+$cor4b: #212125a4;
 $cor5b: #e1e1d7af;
 
 // fontes usadas no projeto
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
 
-$font-primary: 'Poppins', sans-serif;
-$font-secondary: 'Lora', serif;
-$font-tertiary: 'Montserrat', sans-serif;
+$fonte1: 'Urbanist', sans-serif;
